--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seleniumjesttests",
   "version": "1.0.0",
-  "description": "Testing Waterstones webshop with Selenium and Jest tests.",
+  "description": "Testing Bookdepository webshop with Selenium and Jest tests.",
   "main": "index.js",
   "scripts": {
     "test": "npx jest"
@@ -12,7 +12,7 @@
   "author": "Tatjana Kirotar",
   "license": "ISC",
   "devDependencies": {
-    "chromedriver": "^111.0.0",
+    "chromedriver": "^123.0.0",
     "jest": "^29.5.0",
     "selenium-webdriver": "^4.8.1"
   }
